# hexapod

./: AGENTS.md  COMPONENT_ARCHITECTURE_BASELINE.md  CONFIGURATION_PERSISTENCE_DESIGN.md  CONFIG_MANAGER_ARCHITECTURE_REVIEW.md  KPP_IMPLEMENTATION_PLAN.md  README.md  mainboard.code-workspace
.claude/skills/hardware-schematics/: SKILL.md
.claude/skills/hardware-schematics-workspace/: trigger-evals.json
.github/instructions/: config-manager-namespace-checklist.instructions.md  config-manager-pytest-integration.instructions.md  documentation-structure-and-readme-philosophy.instructions.md
.github/skills/config-manager-namespace-checklist/: SKILL.md
components/hex_actuation/: CMakeLists.txt  README.md  robot_control.c
components/hex_config_manager/: CMakeLists.txt  README.md  config_domain_controller_access.h  config_domain_defaults.c  config_domain_defaults.h  config_domain_joint_access.h  config_domain_leg_geometry_defaults.c  config_domain_persistence_nvs.c  config_domain_persistence_nvs.h  config_domain_system_access.c  config_domain_system_access.h  config_domain_wifi_access.h  config_domain_wifi_defaults.c  config_manager.c  config_manager.h  config_manager_core_types.h  config_migration.h  config_namespace_catalog.c  config_namespace_catalog.h  config_namespace_registry.h  config_ns_controller.c  config_ns_controller.h  config_ns_controller_api.h  config_ns_joint_calib.c  config_ns_joint_calib.h  config_ns_leg_geometry.c  config_ns_leg_geometry.h  config_ns_motion_limits.c  config_ns_motion_limits.h  config_ns_system.c  config_ns_system.h  config_ns_wifi.c  config_ns_wifi.h  config_registry.h  config_storage_nvs.c
components/hex_config_manager/namespaces/controller/: config_domain_controller_access.c  config_domain_controller_defaults.c  config_domain_controller_persistence_nvs.c  config_ns_controller_api.h
components/hex_config_manager/namespaces/gait/: README.md  config_domain_gait_defaults.c
components/hex_config_manager/namespaces/joint_cal/: config_domain_joint_access.h
components/hex_config_manager/namespaces/motion_lim/: config_domain_motion_limits_persistence_nvs.c
components/hex_config_manager/namespaces/servo_map/: config_domain_servo_map_defaults.c
components/hex_config_manager/namespaces/system/: config_domain_system_defaults.c  config_ns_system_api.h
components/hex_controller_core/: CMakeLists.txt  controller.c
components/hex_controller_driver_bt_classic/: CMakeLists.txt  README.md  controller_bt_classic.c  controller_bt_classic.h
components/hex_controller_driver_flysky_ibus/: CMakeLists.txt  README.md  controller_flysky_ibus.c  controller_flysky_ibus.h
components/hex_controller_driver_wifi_tcp/: CMakeLists.txt  README.md  controller_wifi_tcp.c  controller_wifi_tcp.h
components/hex_controller_iface/: CMakeLists.txt  README.md
components/hex_locomotion/: CMakeLists.txt  README.md  gait_scheduler.c  swing_trajectory.h  user_command.c  whole_body_control.c  whole_body_control.h
components/hex_motion_limits/: CMakeLists.txt  kpp_config.h  kpp_system.c  kpp_system.h
components/hex_robot_config/: README.md  robot_config.c  robot_config.h
components/hex_rpc_core/: CMakeLists.txt  rpc_commands.c  rpc_commands.h
components/hex_rpc_transport/: CMakeLists.txt  README.md
components/hex_wifi_ap/: CMakeLists.txt  README.md  wifi_ap.c  wifi_ap.h
docs/: COMPONENT_ARCHITECTURE_BASELINE.md  CONFIGURATION_PERSISTENCE_DESIGN.md  CONFIG_MANAGER_ARCHITECTURE_REVIEW.md  CONFIG_MANAGER_NAMESPACE_MODULARIZATION_PLAN.md  KPP_IMPLEMENTATION_PLAN.md  README.md  RPC_SYSTEM_DESIGN.md  RPC_USER_GUIDE.md  TODO.md
docs/architecture/: HEXAPOD_V2_SYSTEM_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
docs/common/interfaces/: CONTROLLER_DRIVERS.md  (+3 more)
docs/configuration/: CONFIG_MANAGER_NAMESPACE_TEMPLATE.md
docs/development/: README.md
docs/interfaces/: RPC_SYSTEM_DESIGN.md  RPC_USER_GUIDE.md
docs/plans/: TODO.md
firmware/mainboard/: AGENTS.md  LICENSE  README.md
firmware/mainboard/components/hex_config_manager/: CMakeLists.txt  config_manager.c  config_manager_param_api.h  config_migration.c  config_namespace_registry.h
firmware/mainboard/components/hex_config_manager/namespaces/controller/: config_domain_controller_access.h  config_domain_controller_persistence_nvs.c
firmware/mainboard/components/hex_config_manager/namespaces/gait/: config_ns_gait.h
firmware/mainboard/components/hex_config_manager/namespaces/joint_cal/: config_domain_joint_defaults.c  config_domain_joint_persistence_nvs.c  config_ns_joint_calib.h
firmware/mainboard/components/hex_config_manager/namespaces/leg_geom/: config_ns_leg_geometry_api.h
firmware/mainboard/components/hex_config_manager/namespaces/motion_lim/: config_ns_motion_limits.c  config_ns_motion_limits.h
firmware/mainboard/components/hex_config_manager/namespaces/wifi/: config_domain_wifi_persistence_nvs.c
firmware/v1/mainboard/components/hex_locomotion/: CMakeLists.txt  gait_scheduler.h  swing_trajectory.h
firmware/v2/mainboard/main/: CMakeLists.txt  main.c
hardware/: .gitignore  SymbolsLib.kicad_sym
hardware/esp32_connector/: esp32_connector-job.gbrjob  sym-lib-table
hardware/leg/: fp-lib-table  leg_v2.kicad_pro  sym-lib-table
hardware/models/: hexapod.FCStd  hexapod_v1.FCStd  hexapod_v2.FCStd
hardware/schematic/: README.md  __init__.py  migrate.py  registry.py  schematic.py  sexpr.py
hardware/servo-mainboard/: hexapod.kicad_pcb  hexapod.kicad_pro  hexapod.kicad_sch
hardware/servo_mainboard/: hexapod.kicad_sch
hardware/v1/: README.md
hardware/v2/: .gitignore  README.md  _common.py
main/: CMakeLists.txt  config_domain_defaults.c  config_domain_defaults.h  config_domain_persistence_nvs.c  config_domain_persistence_nvs.h  config_domain_system_access.h  config_manager.c  config_manager.h  config_namespace_registry.h  config_registry.h  config_storage_nvs.h  controller.c  controller.h  leg.h  main.c  rpc_commands.c  swing_trajectory.c
test/: conftest.py  requirements.txt  test_config_ns_controller.py  test_config_ns_joint_cal.py  test_config_ns_leg_geom.py  test_config_ns_system.py
(+172 files in other folders)
