idf_component_register(
    SRCS
    "main.c"
    "leg.c"
    "gait_scheduler.c"
    "swing_trajectory.c"
    "whole_body_control.c"
    "robot_control.c"
    "robot_config.c"
    "user_command.c"
    "controller.c"
    "controller_flysky_ibus.c"
    "controller_wifi_tcp.c"
    "controller_bt_classic.c"
    "rpc_commands.c"
    "rpc_transport.c"
    "wifi_ap.c"
    "kpp_system.c"
    "kpp_forward_kin.c"
    "kpp_debug.c"
    "config_storage_nvs.c"
    "config_migration.c"
    "config_registry.c"
    "config_domain_defaults.c"
    "config_domain_persistence_nvs.c"
    "config_domain_system_access.c"
    "config_domain_joint_access.c"
    "config_manager.c"
    INCLUDE_DIRS "."
)
