idf_component_register(
    SRCS
    "main.c"
    "leg.c"
    "gait_scheduler.c"
    "swing_trajectory.c"
    "whole_body_control.c"
    "robot_control.c"
    "robot_config.c"
    "user_command.c"
    "kpp_system.c"
    "kpp_forward_kin.c"
    "kpp_debug.c"
    INCLUDE_DIRS "."
    REQUIRES
    hex_rpc_transport
    hex_rpc_core
    hex_wifi_ap
    hex_controller_driver_flysky_ibus
    hex_controller_driver_wifi_tcp
    hex_controller_driver_bt_classic
    hex_controller_core
    hex_config_manager
    hex_shared_types
)
