idf_component_register(
    SRCS
    "config_storage_nvs.c"
    "config_registry.c"
    "config_namespace_registry.c"
    "config_migration.c"
    "config_manager.c"
    "config_ns_system.c"
    "config_ns_joint_calib.c"
    "config_ns_leg_geometry.c"
    "config_domain_system_access.c"
    "config_domain_persistence_nvs.c"
    "config_domain_joint_access.c"
    "config_domain_defaults.c"
    INCLUDE_DIRS "."
    REQUIRES
    nvs_flash
    esp_partition
    hex_shared_types
)
