idf_component_register(
    SRCS
    "config_storage_nvs.c"
    "config_namespace_registry.c"
    "config_namespace_catalog.c"
    "config_migration.c"
    "config_manager.c"
    "namespaces/system/config_ns_system.c"
    "namespaces/system/config_domain_system_access.c"
    "namespaces/system/config_domain_system_defaults.c"
    "namespaces/system/config_domain_system_persistence_nvs.c"
    "namespaces/joint_cal/config_ns_joint_calib.c"
    "namespaces/joint_cal/config_domain_joint_access.c"
    "namespaces/joint_cal/config_domain_joint_defaults.c"
    "namespaces/joint_cal/config_domain_joint_persistence_nvs.c"
    "namespaces/joint_cal/config_registry.c"
    "namespaces/leg_geom/config_ns_leg_geometry.c"
    "namespaces/leg_geom/config_domain_leg_geometry_defaults.c"
    "namespaces/leg_geom/config_domain_leg_geometry_persistence_nvs.c"
    "namespaces/motion_lim/config_ns_motion_limits.c"
    "namespaces/motion_lim/config_domain_motion_limits_defaults.c"
    "namespaces/motion_lim/config_domain_motion_limits_persistence_nvs.c"
    "namespaces/gait/config_ns_gait.c"
    "namespaces/gait/config_domain_gait_defaults.c"
    "namespaces/gait/config_domain_gait_persistence_nvs.c"
    "namespaces/controller/config_ns_controller.c"
    "namespaces/controller/config_domain_controller_access.c"
    "namespaces/controller/config_domain_controller_defaults.c"
    "namespaces/controller/config_domain_controller_persistence_nvs.c"
    "namespaces/wifi/config_ns_wifi.c"
    "namespaces/wifi/config_domain_wifi_access.c"
    "namespaces/wifi/config_domain_wifi_defaults.c"
    "namespaces/wifi/config_domain_wifi_persistence_nvs.c"
    "namespaces/servo_map/config_ns_servo_map.c"
    "namespaces/servo_map/config_domain_servo_map_defaults.c"
    "namespaces/servo_map/config_domain_servo_map_persistence_nvs.c"
    "config_domain_defaults.c"
    INCLUDE_DIRS
    "."
    "namespaces/system"
    "namespaces/joint_cal"
    "namespaces/leg_geom"
    "namespaces/motion_lim"
    "namespaces/gait"
    "namespaces/controller"
    "namespaces/wifi"
    "namespaces/servo_map"
    REQUIRES
    nvs_flash
    esp_partition
    hex_shared_types
)
