idf_component_register(
    SRCS
    "main.c"
    INCLUDE_DIRS "."
    REQUIRES
    hex_rpc_transport
    hex_rpc_core
    hex_wifi_ap
    hex_controller_driver_flysky_ibus
    hex_controller_driver_wifi_tcp
    hex_controller_driver_bt_classic
    hex_controller_core
    hex_locomotion
    hex_motion_limits
    hex_actuation
    hex_robot_config
    hex_kinematics
    hex_config_manager
    hex_shared_types
)
